--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -109,9 +109,69 @@ h1, .md-header__title, .md-typeset .admonition-title, .md-typeset details summar
 
 
 [data-md-color-scheme="slate"] {
-    /* Darm mode */
+    /* Dark mode */
     --md-hue: 280;
     --md-primary-fg-color: #7F4A91;
     --md-primary-fg-color--light: #7F4A91;
     --md-primary-fg-color--dark: #3B1C4A;
 }
+
+
+/* Badges */
+.md-typeset .mdx-badge {
+  font-size:.85em
+}
+.md-typeset .mdx-badge--heart {
+  --md-typeset-a-color:#e92063;
+  --md-accent-fg-color:#ff4281;
+  --md-accent-fg-color--transparent:#e920631a
+}
+.md-typeset .mdx-badge--heart .twemoji {
+  animation:heart 1s infinite
+}
+.md-typeset .mdx-badge--right {
+  float:right;
+  margin-left:.35em
+}
+[dir=ltr] .md-typeset .mdx-badge__icon {
+  border-top-left-radius:.1rem
+}
+[dir=rtl] .md-typeset .mdx-badge__icon {
+  border-top-right-radius:.1rem
+}
+[dir=ltr] .md-typeset .mdx-badge__icon {
+  border-bottom-left-radius:.1rem
+}
+[dir=rtl] .md-typeset .mdx-badge__icon {
+  border-bottom-right-radius:.1rem
+}
+.md-typeset .mdx-badge__icon {
+  background:var(--md-accent-fg-color--transparent);
+  padding:.2rem;
+}
+.md-typeset .mdx-badge__icon .twemoji {
+  top: 2px;
+  left: 1px;
+  position: relative;
+}
+.md-typeset .mdx-badge__icon:last-child {
+  border-radius:.1rem
+}
+[dir=ltr] .md-typeset .mdx-badge__text {
+  border-top-right-radius:.1rem
+}
+[dir=rtl] .md-typeset .mdx-badge__text {
+  border-top-left-radius:.1rem
+}
+[dir=ltr] .md-typeset .mdx-badge__text {
+  border-bottom-right-radius:.1rem
+}
+[dir=rtl] .md-typeset .mdx-badge__text {
+  border-bottom-left-radius:.1rem
+}
+.md-typeset .mdx-badge__text {
+  box-shadow:0 0 0 1px inset var(--md-accent-fg-color--transparent);
+  padding:.2rem .3rem;
+  color: var(--md-default-fg-color--light);
+}
+
