--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -256,7 +256,7 @@ h1, .md-header__title, .md-typeset .admonition-title, .md-typeset details summar
 }
 
 /* Internal links */
-.md-typeset a:not([href*="//"]):not(.glightbox):not(.headerlink):before {
+.md-typeset a:not([href*="//"]):not([href^="mailto:"]):not([href^="tel:"]):not(.glightbox):not(.headerlink):before {
     content: ' ';
     display: inline-block;
     width: 1em;
