--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -93,22 +93,22 @@ h1, .md-header__title, .md-typeset .admonition-title, .md-typeset details summar
 
 .md-typeset .admonition.question, .md-typeset details.question,
 .md-typeset .admonition.warning, .md-typeset details.warning {
-    border-color: #FF8852;
+    border-color: #FFD100;
 }
 
 .md-typeset .question > .admonition-title::before, .md-typeset .question > summary::before,
 .md-typeset .warning > .admonition-title::before, .md-typeset .warning > summary::before {
-    background-color: #FF8852;
+    background-color: #FFD100;
 }
 
 .md-typeset .question > .admonition-title, .md-typeset .question > summary,
 .md-typeset .warning > .admonition-title, .md-typeset .warning > summary {
-    background-color: #FF88521a;
+    background-color: #FFD1001a;
 }
 
 [data-md-color-scheme="slate"] .md-typeset .question > .admonition-title, [data-md-color-scheme="slate"] .md-typeset .question > summary,
 [data-md-color-scheme="slate"] .md-typeset .warning > .admonition-title, [data-md-color-scheme="slate"] .md-typeset .warning > summary {
-    background-color: #FF88521a;
+    background-color: #FFD1001a;
 }
 
 .md-typeset .admonition.danger, .md-typeset details.danger,
