Apply suggestions from code review
Co-authored-by: Raphael Michel <michel@rami.io>

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -33,12 +33,12 @@ h1, .md-header__title, .md-typeset .admonition-title, .md-typeset details summar
 }
 .md-typeset h1 {
 	color: var(--md-typeset-color);
-  font-family: "Titillium Web";
+    font-family: "Titillium Web", "Open Sans", -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;```
 
 }
 .md-typeset h2 {
 	color: var(--md-typeset-color);
-  font-family: "Titillium Web";
+    font-family: "Titillium Web", "Open Sans", -apple-system, BlinkMacSystemFont, Helvetica, Arial, sans-serif;```
 	font-weight: normal;
 }
 .md-typeset h3 {
