--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -7,11 +7,18 @@
     --md-accent-fg-color: #00C2A2;
     --md-accent-fg-color--light: #0ff1c9;
     --md-accent-fg-color--dark: #1B937C;
+    --md-negative: #78787880; 
+    --md-negative-light: #00000080; 
+    --md-negative-dark: #ffffff80; 
+
+
 }
 [data-md-color-scheme="default"] {
     --md-typeset-a-color: #7537A4;
     --md-accent-fg-color: #8541B9;
     --md-accent-fg-color--transparent: #8541B91A;
+    --md-negative: #00000080; 
+
 }
 [data-md-color-scheme="slate"] {
     /* Dark mode */
@@ -22,6 +29,8 @@
     --md-typeset-a-color: #B272E3;
     --md-accent-fg-color: #CB92F7;
     --md-accent-fg-color--transparent: #BE84EB1a;
+    --md-negative: #ffffff80; 
+
 }
 .md-source__facts {
 	display: none;
@@ -282,4 +291,9 @@ h1, .md-header__title, .md-typeset .admonition-title, .md-typeset details summar
 .md-typeset .pretix-button:hover {
     border-color: #000;
     background: #ccc;
+}
+
+/* Images */ 
+.glightbox img {
+  box-shadow: 0 0 10px var(--md-negative); 
 }
