--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -8,16 +8,12 @@
     --md-accent-fg-color--light: #0ff1c9;
     --md-accent-fg-color--dark: #1B937C;
     --md-negative: #78787880; 
-    --md-negative-light: #00000080; 
-    --md-negative-dark: #ffffff80; 
-
 
 }
 [data-md-color-scheme="default"] {
     --md-typeset-a-color: #7537A4;
     --md-accent-fg-color: #8541B9;
     --md-accent-fg-color--transparent: #8541B91A;
-    --md-negative: #00000080; 
 
 }
 [data-md-color-scheme="slate"] {
@@ -29,7 +25,6 @@
     --md-typeset-a-color: #B272E3;
     --md-accent-fg-color: #CB92F7;
     --md-accent-fg-color--transparent: #BE84EB1a;
-    --md-negative: #ffffff80; 
 
 }
 .md-source__facts {
@@ -295,5 +290,5 @@ h1, .md-header__title, .md-typeset .admonition-title, .md-typeset details summar
 
 /* Images */ 
 .glightbox img {
-  box-shadow: 0 0 10px var(--md-negative); 
+  box-shadow: var(--md-shadow-z2);
 }
